Fixed modal titles on mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -802,6 +802,12 @@ ul.social-buttons li a:active {
     font-size: 3em;
 }
 
+@media only screen and (max-width: 600px) {
+    .portfolio-modal .modal-content h2 {
+        font-size: 1em;
+    }
+}
+
 .portfolio-modal .modal-content p {
     margin-bottom: 30px;
 }
